--- a/menu_admin/css/styles.css
+++ b/menu_admin/css/styles.css
@@ -8,7 +8,7 @@ html{
 body{
     width: 100%;
     height: 100%;
-    background: linear-gradient(90deg, #C7C5F4, #776BCC);		
+    background: linear-gradient(90deg, #e6e6f3, #c4c4c7);		
 }
 *,:after,:before{box-sizing:border-box}
 .clearfix:after,.clearfix:before{content:'';display:table}
@@ -122,11 +122,11 @@ body{
 }
 
 .screen {		
-	background: linear-gradient(90deg, #5D54A4, #7C78B8);		
+	background: linear-gradient(90deg, #282828, #444444);		
 	position: relative;	
 	height: 600px;
 	width: 360px;	
-	box-shadow: 0px 0px 24px #5C5696;
+	box-shadow: 0px 0px 24px #2f2e33;
 }
 
 .screen__content {
@@ -163,7 +163,7 @@ body{
 .screen__background__shape2 {
 	height: 220px;
 	width: 220px;
-	background: #6C63AC;	
+	background: #626262;	
 	top: -172px;
 	right: 0;	
 	border-radius: 32px;
@@ -172,7 +172,7 @@ body{
 .screen__background__shape3 {
 	height: 540px;
 	width: 190px;
-	background: linear-gradient(270deg, #5D54A4, #6A679E);
+	background: linear-gradient(270deg, #282828, #464648);
 	top: -24px;
 	right: 0;	
 	border-radius: 32px;
@@ -181,7 +181,7 @@ body{
 .screen__background__shape4 {
 	height: 400px;
 	width: 200px;
-	background: #7E7BB9;	
+	background: #6f6e6e;	
 	top: 420px;
 	right: 50px;	
 	border-radius: 60px;
@@ -201,7 +201,7 @@ body{
 .login__icon {
 	position: absolute;
 	top: 30px;
-	color: #7875B5;
+	color: #7e7d91;
 }
 
 .login__input {
@@ -219,7 +219,7 @@ body{
 .login__input:focus,
 .login__input:hover {
 	outline: none;
-	border-bottom-color: #6A679E;
+	border-bottom-color: #464648;
 }
 
 .login__submit {
@@ -234,8 +234,8 @@ body{
 	display: flex;
 	align-items: center;
 	width: 100%;
-	color: #4C489D;
-	box-shadow: 0px 2px 2px #5C5696;
+	color: #4d4d55;
+	box-shadow: 0px 2px 2px #2f2e33;
 	cursor: pointer;
 	transition: .2s;
 }
@@ -243,14 +243,14 @@ body{
 .login__submit:active,
 .login__submit:focus,
 .login__submit:hover {
-	border-color: #6A679E;
+	border-color: #464648;
 	outline: none;
 }
 
 .button__icon {
 	font-size: 24px;
 	margin-left: auto;
-	color: #7875B5;
+	color: #7e7d91;
 }
 
 .social-login {	
@@ -273,7 +273,7 @@ body{
 	padding: 20px 10px;
 	color: #fff;
 	text-decoration: none;	
-	text-shadow: 0px 0px 8px #7875B5;
+	text-shadow: 0px 0px 8px #666673;
 }
 
 .social-login__icon:hover {
