Commit Reserva y listar(admin) FALTA CRUD

--- a/menu_camarero/css/styles.css
+++ b/menu_camarero/css/styles.css
@@ -401,6 +401,10 @@ object-fit: contain;
 	display: none;
 }
 
+.centrado{
+	text-align: center;
+}
+
 
 /* clase para centrar contenido en horizontal y vertical (lo centra respecto al elemento padre) */
 .flex{
