--- a/menu_usuario/css/home.css
+++ b/menu_usuario/css/home.css
@@ -8,7 +8,8 @@ body{
 	padding: 0;
 	height: 100%;
 	font-family: 'Jost', sans-serif;
-	background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
+	background: linear-gradient(to bottom, #24243e, #302b63, #24243e);
+	background-repeat: no;
 }
 
 
@@ -35,6 +36,10 @@ height: 12%;
 }
 .column-2{
     width: 50%;
+    float: left;
+}
+.column-5{
+    width: 20%;
     float: left;
 }
 .flex{
@@ -288,3 +293,42 @@ input {
 	background-repeat: no-repeat;
 }
 
+/* RESERVAS */
+
+.div_junto_reservas{
+	margin: 2%;
+	border: #000000 2px solid;
+	border-radius: 40px;
+	background-color: white;
+	width: 96%;
+	height: 150px;
+}
+
+.contenido_total_reservas{
+	height: 80%;
+	flex-wrap: nowrap;
+}
+
+.centrado{
+	text-align: center;
+}
+
+.sala_mesa{
+	color: white;
+}
+
+@media only screen and (max-width: 760px) {
+	.column-5{
+		width: 100%;
+	}
+	.notshow{
+		display: none;
+	}
+}
+
+@media only screen and (max-width: 400px) {
+	.new_boton_height{
+		width: 90%;
+		font-size: 10px;
+	}
+}
